--- a/index.html
+++ b/index.html
@@ -3,11 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Mon portfolio</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
+    <header>
+      <div class="logo">
+        <span class="l1">L</span>
+        <span class="k">K</span>
+        <span class="q">Q</span>
+        <span class="m">M</span>
+        <span class="l2">L</span>
+        <span class="r">R</span>
+      </div>
+    </header>
+
+    <script type="module" src="src/script.js"></script>
   </body>
 </html>
