avancement sur le header + animation GSAP

--- a/index.html
+++ b/index.html
@@ -19,6 +19,20 @@
       </div>
     </header>
 
+    <main class="main">
+      <div class="sprite_container">
+        <img class="sprite walk2" src="./public/images/sprite_walk2.png" alt="">
+        <img class="sprite walk1" src="./public/images/sprite_walk1.png" alt="">
+        <img class="sprite idle" src="./public/images/sprite_idle.png"  alt="">
+      </div>
+
+      <section class="welcome_section"></section>
+
+      <div class="bubble card-1">
+        <p><span class="light-bold">Hey!!</span> C’est <span class="light-bold">LKQMLR</span>, Humble créateur du site 😁, Tu viens? je veux te presenter <span class="light-bold">mon portfolio</span>, tu y trouveras tout un tas de choses cool!</p>
+      </div>
+    </main>
+
     <script type="module" src="src/script.js"></script>
   </body>
 </html>
