avancement sur l'animation GSAP

--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
       <section class="welcome_section"></section>
 
       <div class="bubble card-1">
-        <p><span class="light-bold">Hey!!</span> C’est <span class="light-bold">LKQMLR</span>, Humble créateur du site 😁, Tu viens? je veux te presenter <span class="light-bold">mon portfolio</span>, tu y trouveras tout un tas de choses cool!</p>
+        <p><span class="light-bold">Hey!!</span> C’est <span class="light-bold">LKQMLR</span>, humble créateur du site 😁, tu viens ? Je veux te presenter <span class="light-bold">mon portfolio</span>, tu y trouveras tout un tas de choses cool!</p>
+      </div>
+      <div class="bubble card-2">
+        <p><span class="light-bold">🚩 Flash info !!</span></p>
       </div>
     </main>
 
