avancement sur l'animation GSAP

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mon portfolio</title>
   </head>
@@ -20,20 +20,29 @@
     </header>
 
     <main class="main">
-      <div class="sprite_container">
-        <img class="sprite walk2" src="./public/images/sprite_walk2.png" alt="">
-        <img class="sprite walk1" src="./public/images/sprite_walk1.png" alt="">
-        <img class="sprite idle" src="./public/images/sprite_idle.png"  alt="">
-      </div>
+      <img class="sprite walk2" src="./public/images/sprite_walk2.png" alt="" />
+      <img class="sprite walk1" src="./public/images/sprite_walk1.png" alt="" />
+      <img class="sprite idle" src="./public/images/sprite_idle.png" alt="" />
 
       <section class="welcome_section"></section>
-
       <div class="bubble card-1">
-        <p><span class="light-bold">Hey!!</span> C’est <span class="light-bold">LKQMLR</span>, humble créateur du site 😁, tu viens ? Je veux te presenter <span class="light-bold">mon portfolio</span>, tu y trouveras tout un tas de choses cool!</p>
+        <p>
+          <span class="light-bold">Hey!!</span> C’est
+          <span class="light-bold">LKQMLR</span>, humble créateur du site 😁, tu
+          viens ? Je veux te presenter
+          <span class="light-bold">mon portfolio</span>, tu y trouveras tout un
+          tas de choses cool!
+        </p>
       </div>
       <div class="bubble card-2">
-        <p><span class="light-bold">🚩 Flash info !!</span></p>
+        <p>
+          Avant d'aller plus loin, je suis à la
+          <span class="light-bold">recherche d'une alternance niv. bac+3</span>
+          pour apporter et parfaire mes compétences.
+        </p>
       </div>
+
+      <section class="apropos_section"></section>
     </main>
 
     <script type="module" src="src/script.js"></script>
