amelioration global du comportement de l'animation du personnage et du site en général

--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
       </div>
 
       <section class="apropos_section"></section>
+      <div class="bubble card-3">
+        <p>
+          j'ai <span class="light-bold">obtenu mon diplôme</span> de développeur full stack <s class="s-style">👀</s>  en 2023, j'ai pu aborder de nombreux outils tels que..
+        </p>
+      </div>
     </main>
 
     <script type="module" src="src/script.js"></script>
